FIX: missing margin after h4

--- a/main/static/main/css/aqhj.css
+++ b/main/static/main/css/aqhj.css
@@ -677,7 +677,7 @@ a:hover {
     color: #032B2F;
     text-align: left;
     border: 1px solid #DFDFDF;
-    margin-bottom: 40px;
+    margin: 40px 0;
 }
 .article-preview .news-details{
     padding: 8px 5px 0 16px;
